--- a/nginx.conf
+++ b/nginx.conf
@@ -10,6 +10,11 @@ http {
   server {
     listen 3128;
 
+    allow 43.231.208.0/24;
+    allow 43.231.210.0/24;
+    allow 43.231.208.0/24;
+    deny all;
+
     access_log /dev/stdout;
     error_log  /dev/stderr;
 
